# Electron_NAPI_SharedArrayBuffer_APP

./: .gitignore  build_app.sh
backend/: CMakeLists.txt  build.sh  build_n_export.sh  python_bidirectional_ipc_script.py  python_ipc.cc  python_ipc.h  sample_plugin.cc
backend/BPG_Protocol/: BPG.md  CMakeLists.txt  bpg_decoder.cpp  bpg_decoder.h  bpg_encoder.cpp  bpg_encoder.h  bpg_types.h  buffer_writer.h
backend/BPG_Protocol/tests/: bpg_test_app.cpp
backend/include/: InspTarPluginInterface.h  plugin_interface.h
backend/plugins/ImgSrc_Opencv_webcam/: CMakeLists.txt  ImgSrc_Opencv_webcam.cc
doc/: README.md
electron_napi_bin/Darwin-arm64/: addon.node
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/hooks/: useBPGProtocol.ts
frontend/src/lib/: BPG_Protocol.ts  SharedMemoryChannel.ts  nativeAddon.ts  throttle.ts
